<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

            <EditText
                android:id="@+id/etlogin_UserName"
                android:layout_marginBottom="40dp"
                android:layout_margin="30dp"
                android:paddingLeft="3dp"
                android:textColor="#807A7A"
                android:textSize="15dp"
                android:hint="@string/username"
                android:background="@drawable/custom_edittext"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <EditText
                android:id="@+id/etlogin_PassWord"
                android:layout_marginBottom="40dp"
                android:layout_margin="30dp"
                android:paddingLeft="3dp"
                android:textColor="#807A7A"
                android:textSize="15dp"
                android:hint="@string/password"
                android:background="@drawable/custom_edittext"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/btn_login"
                android:textColor="#807A7A"
                android:textSize="15dp"
                android:text="@string/login"
                android:background="@drawable/custom_buttom_login"
                android:layout_width="150dp"
                android:layout_height="30dp"/>

    </LinearLayout>



</layout>