<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide95d"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide5d"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide75n"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide95n"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide10n"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide20n"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guide20n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:background="@drawable/custom_title_oder"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView

                android:textSize="25dp"
                android:gravity="center|left"
                android:textColor="@color/black"
                android:text="@string/foododer"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/shopping_cart"
                    android:layout_margin="8dp"
                    android:background="@drawable/ic_baseline_shopping_cart_24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:gravity="center|left"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:text="@string/welcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guide10n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/count_order"
            android:gravity="center"
            android:text="0"
            android:layout_marginRight="12dp"
            android:background="@drawable/custom_count_oder"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

    </LinearLayout>


    <LinearLayout
        android:background="@drawable/custom_edittext"
        app:layout_constraintTop_toTopOf="@id/guide20n"
        app:layout_constraintBottom_toBottomOf="@id/guide75n"
        app:layout_constraintStart_toStartOf="@id/guide5d"
        app:layout_constraintEnd_toEndOf="@id/guide95d"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ListView
            android:id="@+id/lvcontact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toTopOf="@id/guide75n"
        app:layout_constraintBottom_toBottomOf="@id/guide95n"
        app:layout_constraintStart_toStartOf="@id/guide5d"
        app:layout_constraintEnd_toEndOf="@id/guide95d"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout

            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:gravity="center|left"
                android:textColor="@color/black"
                android:text="@string/totalPrice"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/monney"
                android:gravity="center|right"
                android:textColor="@color/black"
                android:text="@string/monney"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnOder"
            android:textSize="25dp"
            android:textColor="#2C2A2A"
            android:text="@string/order"
            android:background="@drawable/custom_btnoder"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>