<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide5d"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide95d"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide55n"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide13n"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide10n"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide65n"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <LinearLayout
        android:background="@drawable/custom_title_oder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guide10n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <ImageButton
            android:id="@+id/back_order"
            android:background="@drawable/ic_baseline_reply_24"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:textSize="25dp"
            android:gravity="center|left"
            android:textColor="@color/black"
            android:text="@string/yourorder"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/custom_edittext"
        app:layout_constraintBottom_toBottomOf="@id/guide55n"
        app:layout_constraintEnd_toEndOf="@id/guide95d"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guide5d"
        app:layout_constraintTop_toTopOf="@id/guide13n"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvYourOrder"
            android:textColor="#D81212"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:text="Gà chiên"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:text="Gà sào"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:text="Gà nướng"
            android:textSize="20dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toTopOf="@id/guide55n"
        app:layout_constraintBottom_toBottomOf="@id/guide65n"
        app:layout_constraintStart_toStartOf="@id/guide5d"
        app:layout_constraintEnd_toEndOf="@id/guide95d"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <TextView
            android:gravity="center|left"
            android:textColor="@color/black"
            android:text="@string/total"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/monney1"
            android:gravity="center|right"
            android:textColor="@color/black"
            android:text="@string/monney1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>